# chatty

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/web/: .eslintrc.js  next.config.mjs  package.json  tsconfig.json
apps/web/src/app/: layout.tsx
apps/web/src/app/api/auth-token/: route.js  route.ts
apps/web/src/components/: chat.tsx  loader.tsx  message-input.tsx  message-list.tsx
apps/web/src/hooks/: use-web-socket.ts
apps/wss/: Cargo.toml  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
apps/wss/src/: index.ts  main.rs
